# m5_cardputer_redev

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/: .gitignore
components/bat_volt/: CMakeLists.txt  bat_volt.c  bat_volt.h
components/esp_lvgl/: CMakeLists.txt  esp_keypad.c  esp_keypad.cpp  esp_keypad.h  esp_lcd_st7789.c  esp_lcd_st7789.h  esp_lvgl.c  esp_lvgl.h
components/keyboard/: CMakeLists.txt  Kconfig  keyboard.cpp  keyboard.h
components/lvgl_porting/: CMakeLists.txt  lv_port_disp.c  lv_port_indev.c
functions/: CMakeLists.txt  bt_scan.cpp  bt_scan.h  wifi_scan.cpp  wifi_scan.h
gui/: CMakeLists.txt  screen.cpp  screen.h  wifi_info_screen.cpp  wifi_info_screen.h  wifi_list_screen.cpp  wifi_list_screen.h
gui/resource/fonts/: SOURCEHANSANS_18PX_M.c  SOURCEHANSANS_24PX_M.c  UNIFONT_16PX.c
gui/resource/images/: LOGO.c
gui/resource/images/file_list_icon/: FILE_LIST_ICON_FILE.c  FILE_LIST_ICON_FOLDER.c
gui/resource/images/sys_menu_icon/: SYS_MENU_ICON_ABOUT.c  SYS_MENU_ICON_BT.c  SYS_MENU_ICON_FILES.c  SYS_MENU_ICON_INFO.c  SYS_MENU_ICON_USB.c  SYS_MENU_ICON_WIFI.c
gui/screens/: file_screen.c  file_screen.h  fw_info_screen.c  fw_info_screen.h  main_screen.c  main_screen.h  screens.h  startup_screen.c  startup_screen.h  sys_info_screen.c  sys_info_screen.h  wifi_conn_screen.c  wifi_conn_screen.h  wifi_scan_screen.c  wifi_scan_screen.h
main/: BASIC_ASCII.c  CMakeLists.txt  Kconfig.projbuild  gui.cpp  gui.h  idf_component.yml  logo.c  main.cpp  startup_screen.cpp  startup_screen.h
(+19 files in other folders)
